[metadata]
name = robust-bias-aware
version = 0.0.1
author = S. Sarkar
author_email = suryadipto.sarkar@fau.de
description = A python package for ROBUST disease module mining algorithm with study bias correction via the incorporation of bias-aware edge costs.
long_description = file: README.md
keywords = robust, bias-aware
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
packages = find:
package_dir =
    = robust_bias_aware
python_requires = >=3.7
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    robust-bias-aware = robust_bias_aware:robust_bias_aware

[options.packages.find]
where = robust_bias_aware

[options.package_data]
robust_bias_aware = *